chore: ini hosted

--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -18,16 +18,17 @@
     "create:local": "graph create --node http://localhost:8020 lightdotso/mainnet",
     "create:mainnet": "graph create --node http://lightdotso-graph.internal:9020 mainnet",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy @lightdotso/mainnet",
-    "deploy:arbitrum": "graph deploy --product hosted-service lightdotso/arbitrum-one --network arbitrum-one",
-    "deploy:avalanche": "graph deploy --product hosted-service lightdotso/avalanche --network avalanche",
-    "deploy:base": "graph deploy --product hosted-service lightdotso/base --network base",
-    "deploy:bsc": "graph deploy --product hosted-service lightdotso/bsc --network bsc",
-    "deploy:gnosis": "graph deploy --product hosted-service lightdotso/gnosis --network gnosis",
+    "deploy:hosted": "concurrently \"pnpm:*:fix\"",
+    "deploy:hosted:arbitrum": "graph deploy --product hosted-service lightdotso/arbitrum-one --network arbitrum-one",
+    "deploy:hosted:avalanche": "graph deploy --product hosted-service lightdotso/avalanche --network avalanche",
+    "deploy:hosted:base": "graph deploy --product hosted-service lightdotso/base --network base",
+    "deploy:hosted:bsc": "graph deploy --product hosted-service lightdotso/bsc --network bsc",
+    "deploy:hosted:gnosis": "graph deploy --product hosted-service lightdotso/gnosis --network gnosis",
+    "deploy:hosted:hosted": "graph deploy --product hosted-service lightdotso/mainnet --network mainnet",
+    "deploy:hosted:matic": "graph deploy --product hosted-service lightdotso/matic --network matic",
+    "deploy:hosted:optimism": "graph deploy --product hosted-service lightdotso/optimism --network optimism",
     "deploy:local": "graph deploy --node http://localhost:8020 --ipfs http://localhost:5001 @lightdotso/mainnet",
     "deploy:mainnet": "graph deploy --node http://lightdotso-graph.internal:9020 --ipfs http://lightdotso-ipfs.internal:5001 mainnet --network mainnet",
-    "deploy:mainnet:hosted": "graph deploy --product hosted-service lightdotso/mainnet --network mainnet",
-    "deploy:matic": "graph deploy --product hosted-service lightdotso/matic --network matic",
-    "deploy:optimism": "graph deploy --product hosted-service lightdotso/optimism --network optimism",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
     "remove:mainnet": "graph remove --node http://lightdotso-graph.internal:9020 mainnet",
     "test": "graph test"
