--- a/apps/subgraph/subgraph.yaml
+++ b/apps/subgraph/subgraph.yaml
@@ -19,11 +19,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: EntryPointv0.6.0
-    network: mainnet
+    network: optimism
     source:
-      address: "0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789"
       abi: EntryPoint
-      startBlock: 17012204
+      address: "0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789"
+      startBlock: 88234528
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -49,22 +49,9 @@ dataSources:
       eventHandlers:
         - event: AccountDeployed(indexed bytes32,indexed address,address,address)
           handler: handleAccountDeployed
-        # - event: BeforeExecution()
-        #   handler: handleBeforeExecution
-        # - event: Deposited(indexed address,uint256)
-        #   handler: handleDeposited
-        # - event: SignatureAggregatorChanged(indexed address)
-        #   handler: handleSignatureAggregatorChanged
-        # - event: StakeLocked(indexed address,uint256,uint256)
-        #   handler: handleStakeLocked
-        # - event: StakeUnlocked(indexed address,uint256)
-        #   handler: handleStakeUnlocked
-        # - event: StakeWithdrawn(indexed address,address,uint256)
-        #   handler: handleStakeWithdrawn
-        - event: UserOperationEvent(indexed bytes32,indexed address,indexed address,uint256,bool,uint256,uint256)
+        - event: UserOperationEvent(indexed bytes32,indexed address,indexed
+            address,uint256,bool,uint256,uint256)
           handler: handleUserOperationEvent
         - event: UserOperationRevertReason(indexed bytes32,indexed address,uint256,bytes)
           handler: handleUserOperationRevertReason
-        # - event: Withdrawn(indexed address,address,uint256)
-        #   handler: handleWithdrawn
       file: ./src/entry-point.ts
