--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,7 @@ jobs:
         working-directory: apps/subgraph
         run: |
           pnpm graph auth --product hosted-service ${{ secrets.GRAPH_API_TOKEN }}
-          pnpm run deploy:graph:hosted
+          pnpm run deploy:hosted
   deploy-check:
     if: always()
     needs:
