--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -27,7 +27,9 @@
     "deploy:hosted:gnosis": "graph deploy --product hosted-service lightdotso/gnosis --network gnosis",
     "deploy:hosted:hosted": "graph deploy --product hosted-service lightdotso/mainnet --network mainnet",
     "deploy:hosted:matic": "graph deploy --product hosted-service lightdotso/matic --network matic",
+    "deploy:hosted:mumbai": "graph deploy --product hosted-service lightdotso/mumbai --network mumbai",
     "deploy:hosted:optimism": "graph deploy --product hosted-service lightdotso/optimism --network optimism",
+    "deploy:hosted:sepolia": "graph deploy --product hosted-service lightdotso/sepolia --network sepolia",
     "deploy:local": "graph deploy --node http://localhost:8020 --ipfs http://localhost:5001 @lightdotso/mainnet",
     "deploy:mainnet": "graph deploy --node http://lightdotso-graph.internal:9020 --ipfs http://lightdotso-ipfs.internal:5001 mainnet --network mainnet",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
