--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -18,15 +18,18 @@
     "create:local": "graph create --node http://localhost:8020 lightdotso/mainnet",
     "create:mainnet": "graph create --node http://lightdotso-graph.internal:9020 mainnet",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy @lightdotso/mainnet",
-    "deploy:hosted": "concurrently \"pnpm:deploy:hosted:*\"",
+    "deploy:hosted": "concurrently \"pnpm:deploy:hosted:*\" --max-processes 1",
     "deploy:hosted:arbitrum": "graph deploy --product hosted-service lightdotso/arbitrum-one --network arbitrum-one",
     "deploy:hosted:avalanche": "graph deploy --product hosted-service lightdotso/avalanche --network avalanche",
     "deploy:hosted:base": "graph deploy --product hosted-service lightdotso/base --network base",
     "deploy:hosted:bsc": "graph deploy --product hosted-service lightdotso/bsc --network bsc",
+    "deploy:hosted:celo": "graph deploy --product hosted-service lightdotso/celo --network celo",
     "deploy:hosted:gnosis": "graph deploy --product hosted-service lightdotso/gnosis --network gnosis",
     "deploy:hosted:hosted": "graph deploy --product hosted-service lightdotso/mainnet --network mainnet",
     "deploy:hosted:matic": "graph deploy --product hosted-service lightdotso/matic --network matic",
+    "deploy:hosted:mumbai": "graph deploy --product hosted-service lightdotso/mumbai --network mumbai",
     "deploy:hosted:optimism": "graph deploy --product hosted-service lightdotso/optimism --network optimism",
+    "deploy:hosted:sepolia": "graph deploy --product hosted-service lightdotso/sepolia --network sepolia",
     "deploy:local": "graph deploy --node http://localhost:8020 --ipfs http://localhost:5001 @lightdotso/mainnet",
     "deploy:mainnet": "graph deploy --node http://lightdotso-graph.internal:9020 --ipfs http://lightdotso-ipfs.internal:5001 mainnet --network mainnet",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
