--- a/apps/subgraph/subgraph.yaml
+++ b/apps/subgraph/subgraph.yaml
@@ -1,29 +1,14 @@
-# Copyright (C) 2023 Light, Inc.
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
 specVersion: 0.0.5
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
     name: EntryPointv0.6.0
-    network: optimism
+    network: mumbai
     source:
       abi: EntryPoint
       address: "0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789"
-      startBlock: 88234528
+      startBlock: 34166156
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
