fix: ini base testnet

--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -22,6 +22,7 @@
     "deploy:hosted:arbitrum": "graph deploy --product hosted-service lightdotso/arbitrum-one --network arbitrum-one",
     "deploy:hosted:avalanche": "graph deploy --product hosted-service lightdotso/avalanche --network avalanche",
     "deploy:hosted:base": "graph deploy --product hosted-service lightdotso/base --network base",
+    "deploy:hosted:base-testnet": "graph deploy --product hosted-service lightdotso/base-testnet --network base-testnet",
     "deploy:hosted:bsc": "graph deploy --product hosted-service lightdotso/bsc --network bsc",
     "deploy:hosted:celo": "graph deploy --product hosted-service lightdotso/celo --network celo",
     "deploy:hosted:gnosis": "graph deploy --product hosted-service lightdotso/gnosis --network gnosis",
