--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,5 +93,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: deploy-checkly
+          allowed-skips: deploy-checkly,deploy-graph
           jobs: ${{ toJSON(needs) }}
