--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -95,6 +95,7 @@
     "**/lib/**",
     "**/pods/**",
     "**/scripts/**",
+    "**/snapshots/**",
     "**/target/**",
     "**/tools/**",
     "**/wiki/**"
