--- a/fly/gas/fly.toml
+++ b/fly/gas/fly.toml
@@ -15,12 +15,13 @@ kill_timeout = "5s"
   image = "ghcr.io/lightdotso/lightdotso:latest"
 
 [deploy]
-  strategy = "bluegreen"
+  strategy = "canary"
 
 [http_service]
+  internal_port = 3000
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
 
 [checks]
   [checks.health]
