perf: ini paymaster broadcast

--- a/broadcast/.gitignore
+++ b/broadcast/.gitignore
@@ -1,2 +1,8 @@
+!LightVerifyingPaymasterDeployer.s.sol
 !LightWalletDeployer.s.sol
 !LightWalletFactoryDeployer.s.sol
+
+ERC20Transfer.s.sol
+ERC20TransferFlow.s.sol
+
+31337
