--- a/crates/gas/Cargo.toml
+++ b/crates/gas/Cargo.toml
@@ -11,6 +11,7 @@
 [dependencies]
   async-trait = { workspace = true }
   clap = { workspace = true }
+  ethers-main = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
