--- a/crates/paymaster/Cargo.toml
+++ b/crates/paymaster/Cargo.toml
@@ -14,8 +14,11 @@
   ethers-main = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
+  lightdotso-gas = { workspace = true }
   lightdotso-tracing = { workspace = true }
+  reqwest = { workspace = true }
   serde = { workspace = true }
+  serde_json = { workspace = true }
   silius-primitives = { workspace = true }
   silius-rpc = { workspace = true }
   spki = { workspace = true, optional = true }
