perf: ini abi contracts

--- a/crates/paymaster/Cargo.toml
+++ b/crates/paymaster/Cargo.toml
@@ -11,7 +11,7 @@
 [dependencies]
   async-trait = { workspace = true }
   clap = { workspace = true }
-  ethers-main = { workspace = true }
+  ethers = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
   lightdotso-gas = { workspace = true }
