--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@
     "crates/discord",
     "crates/gas",
     "crates/graphql",
+    "crates/jsonrpsee",
     "crates/indexer",
     "crates/kafka",
     "crates/keychain",
@@ -95,6 +96,7 @@
   lightdotso-gas = { path = "./crates/gas" }
   lightdotso-graphql = { path = "./crates/graphql" }
   lightdotso-indexer = { path = "./crates/indexer" }
+  lightdotso-jsonrpsee = { path = "./crates/jsonrpsee" }
   lightdotso-kafka = { path = "./crates/kafka" }
   lightdotso-keychain = { path = "./crates/indexer" }
   lightdotso-notifier = { path = "./crates/notifier" }
@@ -173,3 +175,4 @@
   uniffi_macros = "0.24.2"
   uniffi_build = { version = "0.24.2", features = ["builtin-bindgen"] }
   uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
+  url = { version = "2.4", default-features = false }
