--- a/crates/gas/Cargo.toml
+++ b/crates/gas/Cargo.toml
@@ -14,6 +14,7 @@
   ethers-main = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
+  lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { workspace = true }
   serde = { workspace = true }
