--- a/crates/contracts/Cargo.toml
+++ b/crates/contracts/Cargo.toml
@@ -12,3 +12,4 @@
   ethers = { workspace = true }
   eyre = { workspace = true }
   lazy_static = { workspace = true }
+  tokio = { workspace = true }
