--- a/.github/workflows/graphql.yml
+++ b/.github/workflows/graphql.yml
@@ -1,4 +1,4 @@
-name: Graphql
+name: GraphQL
 on:
   workflow_dispatch:
   schedule:
@@ -23,7 +23,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
+          token: ${{ secrets.BOT_TOKEN }}
           commit-message: "Update GraphQL Schema"
           branch: graphql-schema-updates
           title: "Update GraphQL Schema"
-          message: "This is an automated pull request to update our local schema cache"
