feat: ini gas + pm (#585)
* feat: ini gas + pm

* chore: update

* perf: ini abi contracts

* chore: update

* chore: update

* chore: update

* chore: update mainnet indexer

* feat: ini jsonrpsee crate

* chore: update

* feat: ini contracts crate

* chore: update

* chore: update

* chore: update

* perf: ini valid

* feat: ini get hash

* chore: ini fallback provider

* chore: update

* chore: update

* perf: construct paymaster and data

* chore: update

* chore: raise gha limit

--- a/crates/gas/Cargo.toml
+++ b/crates/gas/Cargo.toml
@@ -10,9 +10,11 @@
 
 [dependencies]
   async-trait = { workspace = true }
-  clap = { workspace = true }
+  clap = { workspace = true, features = ["derive", "env"] }
+  ethers-main = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
+  lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { workspace = true }
   serde = { workspace = true }
