--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -27,7 +27,7 @@ jobs:
   fly-wait-docker:
     if: github.event_name == 'push' || startsWith(github.ref, 'refs/tags/@lightdotso/bin') && github.event_name == 'release'
     runs-on: ubuntu-latest
-    timeout-minutes: 90
+    timeout-minutes: 120
     steps:
       - name: Sleep for 30 seconds
         run: |
@@ -286,7 +286,7 @@ jobs:
         working-directory: ./fly/indexer-gnosis
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-polygon:
+  fly-deploy-indexer-mainnet:
     if: github.event_name == 'workflow_dispatch' && inputs.group == 'indexer'
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -297,7 +297,7 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Fly Deploy
         run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-polygon
+        working-directory: ./fly/indexer-mainnet
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-indexer-optimism:
@@ -312,6 +312,20 @@ jobs:
       - name: Fly Deploy
         run: flyctl deploy --remote-only
         working-directory: ./fly/indexer-optimism
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-indexer-polygon:
+    if: github.event_name == 'workflow_dispatch' && inputs.group == 'indexer'
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v4
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/indexer-polygon
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-indexer-sepolia:
@@ -454,8 +468,9 @@ jobs:
       - fly-deploy-indexer-base
       - fly-deploy-indexer-bsc
       - fly-deploy-indexer-gnosis
-      - fly-deploy-indexer-polygon
+      - fly-deploy-indexer-mainnet
       - fly-deploy-indexer-optimism
+      - fly-deploy-indexer-polygon
       - fly-deploy-indexer-sepolia
       - fly-deploy-log-shipper
       - fly-deploy-otel-collector
@@ -470,5 +485,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-gas,fly-deploy-grafana,fly-deploy-graph,fly-deploy-ipfs,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
+          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-gas,fly-deploy-grafana,fly-deploy-graph,fly-deploy-ipfs,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-mainnet,fly-deploy-indexer-optimism,fly-deploy-indexer-polygon,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
           jobs: ${{ toJSON(needs) }}
