--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@
     "crates/bundler",
     "crates/consumer",
     "crates/core",
+    "crates/contracts",
     "crates/db",
     "crates/discord",
     "crates/gas",
     "crates/graphql",
+    "crates/jsonrpsee",
     "crates/indexer",
     "crates/kafka",
     "crates/keychain",
@@ -90,11 +92,13 @@
   lightdotso-axum = { path = "./crates/axum" }
   lightdotso-bundler = { path = "./crates/bundler" }
   lightdotso-consumer = { path = "./crates/consumer" }
+  lightdotso-contracts = { path = "./crates/contracts" }
   lightdotso-discord = { path = "./crates/discord" }
   lightdotso-db = { path = "./crates/db" }
   lightdotso-gas = { path = "./crates/gas" }
   lightdotso-graphql = { path = "./crates/graphql" }
   lightdotso-indexer = { path = "./crates/indexer" }
+  lightdotso-jsonrpsee = { path = "./crates/jsonrpsee" }
   lightdotso-kafka = { path = "./crates/kafka" }
   lightdotso-keychain = { path = "./crates/indexer" }
   lightdotso-notifier = { path = "./crates/notifier" }
@@ -173,3 +177,4 @@
   uniffi_macros = "0.24.2"
   uniffi_build = { version = "0.24.2", features = ["builtin-bindgen"] }
   uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
+  url = { version = "2.4", default-features = false }
