--- a/crates/jsonrpsee/Cargo.toml
+++ b/crates/jsonrpsee/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-  name = "lightdotso-paymaster"
+  name = "lightdotso-jsonrpsee"
 
   version.workspace = true
   edition.workspace = true
@@ -9,19 +9,11 @@
   repository.workspace = true
 
 [dependencies]
-  async-trait = { workspace = true }
-  clap = { workspace = true }
   ethers = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
-  lightdotso-contracts = { workspace = true }
-  lightdotso-gas = { workspace = true }
-  lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { workspace = true }
   serde = { workspace = true }
   serde_json = { workspace = true }
-  silius-primitives = { workspace = true }
-  silius-rpc = { workspace = true }
-  spki = { workspace = true, optional = true }
-  tokio = { workspace = true }
+  url = { workspace = true }
