--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -17,6 +17,9 @@
   hyper = { workspace = true }
   hyper-rustls = { workspace = true }
   lazy_static = { workspace = true }
+  lightdotso-contracts = { workspace = true }
+  lightdotso-jsonrpsee = { workspace = true }
+  lightdotso-paymaster = { workspace = true }
   lightdotso-tracing = { workspace = true }
   rand = { workspace = true }
   serde = { workspace = true }
