fix: deploy hosted

--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -25,11 +25,13 @@
     "deploy:hosted:base-testnet": "graph deploy --product hosted-service lightdotso/base-testnet --network base-testnet",
     "deploy:hosted:bsc": "graph deploy --product hosted-service lightdotso/bsc --network bsc",
     "deploy:hosted:celo": "graph deploy --product hosted-service lightdotso/celo --network celo",
+    "deploy:hosted:fantom": "graph deploy --product hosted-service lightdotso/fantom --network fantom",
     "deploy:hosted:gnosis": "graph deploy --product hosted-service lightdotso/gnosis --network gnosis",
     "deploy:hosted:hosted": "graph deploy --product hosted-service lightdotso/mainnet --network mainnet",
     "deploy:hosted:matic": "graph deploy --product hosted-service lightdotso/matic --network matic",
     "deploy:hosted:mumbai": "graph deploy --product hosted-service lightdotso/mumbai --network mumbai",
     "deploy:hosted:optimism": "graph deploy --product hosted-service lightdotso/optimism --network optimism",
+    "deploy:hosted:polygon-zkevm": "graph deploy --product hosted-service lightdotso/polygon-zkevm --network polygon-zkevm",
     "deploy:hosted:sepolia": "graph deploy --product hosted-service lightdotso/sepolia --network sepolia",
     "deploy:local": "graph deploy --node http://localhost:8020 --ipfs http://localhost:5001 @lightdotso/mainnet",
     "deploy:mainnet": "graph deploy --node http://lightdotso-graph.internal:9020 --ipfs http://lightdotso-ipfs.internal:5001 mainnet --network mainnet",
