--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -15,6 +15,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   api-wait-fly:
+    if: github.event_name == 'push' || startsWith(github.ref, 'refs/tags/@lightdotso/bin') && github.event_name == 'release'
     runs-on: ubuntu-latest
     timeout-minutes: 120
     steps:
