--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -66,6 +66,7 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
     "next": "^13.4.13",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "^18.2.0",
