feat: ini gas station + migration

--- a/crates/gas/Cargo.toml
+++ b/crates/gas/Cargo.toml
@@ -11,9 +11,11 @@
 [dependencies]
   async-trait = { workspace = true }
   clap = { workspace = true, features = ["derive", "env"] }
+  ethers = { workspace = true }
   ethers-main = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
+  lightdotso-contracts = { workspace = true }
   lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { workspace = true }
