--- a/fly/gas/fly.toml
+++ b/fly/gas/fly.toml
@@ -18,6 +18,7 @@ kill_timeout = "5s"
   strategy = "canary"
 
 [http_service]
+  internal_port = 3000
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
