--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -46,6 +46,7 @@
     "**/*.xcworkspacedata",
     "**/*.xml",
     "**/*.webp",
+    "**/sentry.properties",
     "**/next-env.d.ts",
     "**/vite-env.d.ts",
     "gradle*",
@@ -53,6 +54,8 @@
     "*.gradle",
     "*file",
     ".*",
+    "*.config.js",
+    "*.config.mjs",
     "*.config.ts",
     "*.workspace.ts",
     "*.json",
