--- a/apps/auth/turbo.json
+++ b/apps/auth/turbo.json
@@ -4,7 +4,14 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["NEXT_PUBLIC_VERCEL_URL", "INNGEST_EVENT_KEY"],
+      "env": [
+        "INNGEST_EVENT_KEY",
+        "NEXT_PUBLIC_SENTRY_DSN",
+        "NEXT_PUBLIC_VERCEL_ENV",
+        "NEXT_PUBLIC_VERCEL_URL",
+        "SENTRY_DSN",
+        "VERCEL_ENV"
+      ],
       "inputs": ["app/**", "pages/**", "src/**", "next.config.js"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
