--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -24,7 +24,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.js"
+    "next.config.mjs"
   ],
   "exclude": ["node_modules"]
 }
