chore: ini sig (#619)
* chore: update

* chore: v2

* chore: v2

* chore: v2

* chore: update

* chore: update

* chore: update

* chore: update

--- a/.github/workflows/graphql.yml
+++ b/.github/workflows/graphql.yml
@@ -20,10 +20,13 @@ jobs:
         with:
           server-url: https://api.thegraph.com/subgraphs/name/lightdotso/mainnet
           output-file: crates/graphql/schemas/graph.graphql
+      - name: Run Fix
+        run: |
+          pnpm run fix
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.BOT_TOKEN }}
-          commit-message: "Update GraphQL Schema"
+          commit-message: "chore: Update GraphQL Schema"
           branch: graphql-schema-updates
-          title: "Update GraphQL Schema"
+          title: "chore: Update GraphQL Schema"
