--- a/apps/changelog/package.json
+++ b/apps/changelog/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.22.11",
+    "@sentry/integrations": "^7.70.0",
+    "@sentry/nextjs": "^7.70.0",
     "next": "^13.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
