--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -28,6 +28,8 @@
     "@lightdotso/ui": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.2.0",
+    "@sentry/integrations": "^7.70.0",
+    "@sentry/nextjs": "^7.70.0",
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
