--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -24,13 +24,14 @@
     "@lightdotso/prisma": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
     "@prisma/client": "^5.2.0",
+    "@sentry/nextjs": "^7.70.0",
     "@trpc-limiter/core": "^0.0.8",
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "inngest": "^2.6.0",
-    "next": "^13.4.13",
+    "next": "^13.4.5",
     "next-auth": "^4.23.1",
     "prisma": "^5.2.0",
     "react": "^18.2.0",
