--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.22.11",
-    "next": "^13.4.13",
+    "@sentry/integrations": "^7.70.0",
+    "@sentry/nextjs": "^7.70.0",
+    "next": "^13.4.5",
     "nextra": "^2.12.3",
     "nextra-theme-docs": "^2.12.3",
     "react": "^18.2.0",
