--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -28,6 +28,8 @@
     "@lightdotso/ui": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.2.0",
+    "@sentry/integrations": "^7.70.0",
+    "@sentry/nextjs": "^7.70.0",
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
@@ -37,7 +39,7 @@
     "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "connectkit": "^1.5.2",
     "kysely-postgres-js": "^1.1.1",
-    "next": "^13.4.13",
+    "next": "^13.4.5",
     "next-auth": "^4.23.1",
     "postgres": "^3.3.5",
     "prisma": "^5.2.0",
