--- a/apps/home/package.json
+++ b/apps/home/package.json
@@ -24,9 +24,11 @@
     "@heroicons/react": "^2.0.11",
     "@lightdotso/const": "workspace:*",
     "@lightdotso/ui": "workspace:*",
+    "@sentry/integrations": "^7.70.0",
+    "@sentry/nextjs": "^7.70.0",
     "clsx": "^1.2.1",
     "critters": "^0.0.16",
-    "next": "^13.4.13",
+    "next": "^13.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
