--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sentry/integrations": "^7.70.0",
+    "@sentry/nextjs": "^7.70.0",
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
@@ -56,7 +58,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
-    "next": "^13.4.13",
+    "next": "^13.4.5",
     "next-auth": "^4.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
