--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -9,12 +9,15 @@
   repository.workspace = true
 
 [dependencies]
+  async-trait = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
   ethers = { workspace = true }
   ethers-providers = { workspace = true }
   expanded-pathbuf = "0.1"
   eyre = { workspace = true }
+  jsonrpsee = { workspace = true }
   lazy_static = { workspace = true }
+  lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   pin-utils = "0.1"
   silius-grpc = { workspace = true }
