feat: ini bundler rpc (#633)
* feat: ini bundler rpc

* feat: ini local supported entrypoints

* chore: update

* perf: update

* perf: ini bundler params

* perf: ini bundler impl

--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -9,14 +9,18 @@
   repository.workspace = true
 
 [dependencies]
+  async-trait = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
   ethers = { workspace = true }
   ethers-providers = { workspace = true }
   expanded-pathbuf = "0.1"
   eyre = { workspace = true }
+  jsonrpsee = { workspace = true }
   lazy_static = { workspace = true }
+  lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   pin-utils = "0.1"
+  serde_json = { workspace = true }
   silius-grpc = { workspace = true }
   silius-primitives = { workspace = true }
   silius-rpc = { workspace = true }
