feat: ini uopool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -148,11 +148,13 @@
   serde = "1.0.183"
   serde_json = "1.0.104"
   spki = "0.7.2"
-  silius-grpc = { git = "https://github.com/Vid201/silius", rev = "bc8b7b0039c9a2b02256fefc7eed3b2efc94bf96", package = "silius-grpc" }
-  silius-primitives = { git = "https://github.com/Vid201/silius", rev = "bc8b7b0039c9a2b02256fefc7eed3b2efc94bf96", package = "silius-primitives", features = [
+  silius-contracts = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-contracts" }
+  silius-grpc = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-grpc" }
+  silius-primitives = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-primitives", features = [
     "test-utils",
   ] }
-  silius-rpc = { git = "https://github.com/Vid201/silius", rev = "bc8b7b0039c9a2b02256fefc7eed3b2efc94bf96", package = "silius-rpc" }
+  silius-rpc = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-rpc" }
+  silius-uopool = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-uopool" }
   tauri = { version = "1.4", features = ["shell-open"] }
   tauri-build = { version = "1.4", features = [] }
   tokio = { version = "1", features = ["full"] }
