--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -11,6 +11,7 @@
 [dependencies]
   async-trait = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
+  enumset = { workspace = true }
   ethers = { workspace = true }
   ethers-providers = { workspace = true }
   expanded-pathbuf = "0.1"
