--- a/crates/jsonrpsee/Cargo.toml
+++ b/crates/jsonrpsee/Cargo.toml
@@ -16,4 +16,5 @@
   reqwest = { workspace = true }
   serde = { workspace = true }
   serde_json = { workspace = true }
+  silius-primitives = { workspace = true }
   url = { workspace = true }
