--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -11,17 +11,21 @@
 [dependencies]
   async-trait = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
+  enumset = { workspace = true }
   ethers = { workspace = true }
   ethers-providers = { workspace = true }
   expanded-pathbuf = "0.1"
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
   lazy_static = { workspace = true }
+  lightdotso-contracts = { workspace = true }
   lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   pin-utils = "0.1"
   serde_json = { workspace = true }
+  silius-contracts = { workspace = true }
   silius-grpc = { workspace = true }
   silius-primitives = { workspace = true }
   silius-rpc = { workspace = true }
+  silius-uopool = { workspace = true }
   tokio = { workspace = true, features = ["full"] }
