--- a/.github/workflows/graphql.yml
+++ b/.github/workflows/graphql.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v4
+      - name: Node Install
+        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Run Introspection
         uses: obmarg/action-graphql-introspect@main
         with:
