--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -13,3 +13,9 @@
   scopelint = ["run", "--package", "embedded-scopelint", "--"]
   uniffi-bindgen = ["run", "--package", "embedded-uniffi-bindgen", "--"]
   test-all = ["test", "--workspace"]
+
+[target.x86_64-apple-darwin]
+  rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
+
+[target.aarch64-apple-darwin]
+  rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
