--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,8 +83,8 @@
   http-body = "0.4.5"
   hyper = { version = "0.14", features = ["full"] }
   hyper-rustls = "0.24.1"
-  js-sys = "=0.3.56"
-  jsonrpsee = { version = "0.18.2", features = ["server", "macros", "client"] }
+  js-sys = "=0.3.64"
+  jsonrpsee = { version = "0.20.1", features = ["server", "macros", "client"] }
   lazy_static = "1.4.0"
   lightdotso-app = { path = "./crates/app" }
   lightdotso-autometrics = { path = "./crates/autometrics" }
@@ -146,16 +146,11 @@
     "optional_block_gas_limit",
     "optional_no_base_fee",
   ] }
+  rundler-sim = { git = "https://github.com/alchemyplatform/rundler", rev = "22fc250166cf525596faa9db84f5f56ca945a40b", package = "rundler-sim" }
+  rundler-types = { git = "https://github.com/alchemyplatform/rundler", rev = "22fc250166cf525596faa9db84f5f56ca945a40b", package = "rundler-types" }
   serde = "1.0.183"
   serde_json = "1.0.104"
   spki = "0.7.2"
-  silius-contracts = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-contracts" }
-  silius-grpc = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-grpc" }
-  silius-primitives = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-primitives", features = [
-    "test-utils",
-  ] }
-  silius-rpc = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-rpc" }
-  silius-uopool = { git = "https://github.com/Vid201/silius", rev = "b1841aa614a9410907d1801128bf500f2a87596f", package = "silius-uopool" }
   tauri = { version = "1.4", features = ["shell-open"] }
   tauri-build = { version = "1.4", features = [] }
   tokio = { version = "1", features = ["full"] }
