--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -22,10 +22,6 @@
   lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   pin-utils = "0.1"
+  rundler-sim = { workspace = true }
   serde_json = { workspace = true }
-  silius-contracts = { workspace = true }
-  silius-grpc = { workspace = true }
-  silius-primitives = { workspace = true }
-  silius-rpc = { workspace = true }
-  silius-uopool = { workspace = true }
   tokio = { workspace = true, features = ["full"] }
