--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -9,6 +9,7 @@
   repository.workspace = true
 
 [dependencies]
+  anyhow = "1.0.70"
   async-trait = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
   enumset = { workspace = true }
@@ -21,8 +22,11 @@
   lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
   pin-utils = "0.1"
+  rundler-pool = { workspace = true }
+  rundler-provider = { workspace = true }
   rundler-sim = { workspace = true }
   rundler-types = { workspace = true }
   serde = { workspace = true }
   serde_json = { workspace = true }
+  thiserror = { workspace = true }
   tokio = { workspace = true, features = ["full"] }
