--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -9,7 +9,7 @@
   repository.workspace = true
 
 [dependencies]
-  anyhow = "1.0.70"
+  anyhow = { workspace = true }
   async-trait = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
   enumset = { workspace = true }
